# Realtime-Datastreaming

./: .gitignore  COLLECTOR_COMPARISON.md  DELETE_INFLUX_DATA.py  DEPLOYMENT.md  ENV_SETUP.md  FIXES_APPLIED.md  MQTT_TLS_SETUP.md  PERFORMANCE_TESTING_DOCUMENTATION.md  QUICK_FIX.md  QUICK_START_DEPLOYMENT.md  README.md  TECHNICAL_DOCUMENTATION.md  TELEGRAF.md  TEST_REVIEW.md  TLS_IMPLEMENTATION_SUMMARY.md  TROUBLESHOOTING.md  check_influxdb_connection.py  check_mqtt_connection.py  debug_influxdb_fields.py  env.example  env.example.device  env.example.universal  env.example.vps1-docker  env.example.vps2-flask  monitor_latency.py  plan.md  pyproject.toml  requirements.txt  test.py
cloudflare/: README.md  tunnel-config-flask.example.yml  tunnel-config.example.yml
collector/: device_status_api.py  mqtt_collector.py
dashboard/: app.py
dashboard/templates/: dashboard.html
devices/: __init__.py  device_simulator.py  run_devices.py
docker/: docker-compose.with-telegraf.yml  docker-compose.yml
docker/mosquitto/: generate_certs.sh
monitoring/: README.md  __init__.py  check_influxdb_performance.py  collect_latency_data.py  generate_latency_report.py  investigate_spike.py  monitor_latency.py
scripts/: compare_collectors.py
telegraf/: README.md  telegraf.conf  telegraf.conf.no-docker
testing/: QUICK_START.md  README.md  SUMMARY.md  analyze_results.py  test_network_failures.py
testing/results/: network_failure_test_20260103_105613.json  network_failure_test_20260103_111902.json  network_failure_test_20260103_112140.json  network_failure_test_20260103_113109.json  (+24 more)
(+7 files in other folders)
